--- a/css/general.css
+++ b/css/general.css
@@ -23,7 +23,7 @@ p {
 main {
   margin-top: 230px;
   margin-bottom: 50px;
-  font-family: var(--font-family-helvetica);
+  font-family: helvetica, arial, sans-serif;
 }
 
 a {
@@ -65,7 +65,7 @@ a {
 /* SPAN CLASSES */
 
 .orange {
-  color: var(--Rainydays-orange);
+  color: rgb(254, 169, 51);
   text-transform: uppercase;
 }
 
@@ -80,8 +80,8 @@ a {
   width: 200px;
   height: 40px;
   font-family: Helvetica, arial, sans-serif;
-  background-color: var(--Rainydays-blue);
-  color: var(--text-color-white);
+  background-color: rgb(46, 72, 107);
+  color: white;
   border: none;
   border-radius: 6px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -103,7 +103,7 @@ a {
   height: 60px;
   font-family: helvetica, arial, sans-serif;
   font-size: 1.5rem;
-  background-color: var(--Rainydays-orange);
+  background-color: rgb(254, 169, 51);
   color: black;
   letter-spacing: 3px;
   border: none;
