--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -3,7 +3,7 @@
 /* Have the input like on the course I took, so that it reduces in size */
 
 header {
-  background-color: var(--Rainydays-blue);
+  background-color: rgb(46, 72, 107);
   position: fixed;
   top: 0;
   right: 0;
@@ -91,7 +91,7 @@ header {
     bottom: -4000px;
     width: 165px;
     z-index: 2;
-    background-color: var(--Rainydays-blue);
+    background-color: rgb(46, 72, 107);
   }
   
   .hamburger-menu-links li {
@@ -141,7 +141,7 @@ header {
 
   .desktop-nav a {
     text-decoration: none;
-    color: var(--text-color-white);
+    color: white;
     font-family: helvetica, arial, sans-serif;
     font-size: 1.3em;
   }
@@ -160,7 +160,7 @@ header {
     /* Have the width in % so that it changes? */
     border: none;
     border-radius: 6px;
-    font-family: var(font-family-helvetica);
+    font-family: helvetica, arial, sans-serif;
     font-size: 1em;
     padding-left: 10px;
   }
@@ -183,11 +183,11 @@ header {
 /* I the middle between mobile and desktop all the words scramble together ... */
 
 footer {
-  background-color: var(--Rainydays-blue);
+  background-color: rgb(46, 72, 107);
   display: flex;
   flex-direction: column;
-  color: var(--text-color-white);
-  font-family: var(--font-family-helvetica);
+  color: white;
+  font-family: helvetica, arial, sans-serif;
   font-size: 1em;
   padding-bottom: 10px;
 }
@@ -214,7 +214,7 @@ footer {
 
 .our-world a {
   text-decoration: none;
-  color: var(--text-color-white);
+  color: white;
 }
 
 .follow-us {
@@ -282,7 +282,7 @@ footer {
     position: absolute;
     top: 0px;
     left: 65%;
-    background-color: var(--Rainydays-orange);
+    background-color: rgb(254, 169, 51);
     padding: 3.5px 12px;
     border-radius: 6px;
   }  
@@ -323,7 +323,7 @@ footer {
   }
 
   .desktop-newsletter-button {
-    background-color: var(--Rainydays-orange);
+    background-color: rgb(254, 169, 51);
     padding: 3.5px 12px;
     border-radius: 6px;
     position: absolute;
