--- a/css/home.css
+++ b/css/home.css
@@ -2,7 +2,7 @@
   background-image: url(/assets/images/banner-image.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  color: var(--text-color-white);
+  color: white;
   padding: 150px 0 40px 40px;
   margin: 0 0 40px 0;
   display: flex;
@@ -62,8 +62,8 @@ h2 {
 /* SALE */
 
 .sale {
-  background-color: var(--Rainydays-blue);
-  color: var(--text-color-white);
+  background-color: rgb(46, 72, 107);
+  color: white;
   border-radius: 10px;
   display: flex;
 }
@@ -137,8 +137,8 @@ h2 {
 }
 
 .shop-container {
-  background-color: var(--Rainydays-blue);
-  color: var(--text-color-white);
+  background-color: rgb(46, 72, 107);
+  color: white;
   border-radius: 6px;
   font-size: 1rem;
 }
@@ -174,8 +174,8 @@ h2 {
 .activity-container {
   display: flex;
   flex-direction: column;
-  background-color: var(--Rainydays-blue);
-  color: var(--text-color-white);
+  background-color: rgb(46, 72, 107);
+  color: white;
   align-items: center;
   border-radius: 6px;
   min-height: 100px;
