--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,6 @@
 .banner {
-  background-image: url(/assets/images/banner-image.jpg);
+  /*background-image: url(/assets/images/banner-image.jpg);*/
+  background-image: url("/assets/images/banner-image.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
