--- a/css/content.css
+++ b/css/content.css
@@ -334,9 +334,7 @@ h2 {
   
 .about-end {
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
-  gap: 1em;
 }
 
 .about-end-img {
@@ -347,9 +345,17 @@ h2 {
   flex: 1;
 }
 
+@media only screen and (max-width: 700px) {
+  .about-end {
+    flex-direction: column;
+  }
+}
+
+
 @media only screen and (min-width: 701px) {
   .about-end {
     flex-direction: row;
+    gap: 1em;
   }
 }
 
