--- a/css/content.css
+++ b/css/content.css
@@ -7,7 +7,8 @@ contact-us.html
 contact-form.html
 faq.html
 shop.html
-xplorer-fleece
+xplorer-fleece.html
+newsletter.html
 */
 
 main {
@@ -28,7 +29,6 @@ h1 {
   display: flex;
   justify-content: center;
 }
-/*on contact-us html, faq.html and contact-form.html its only center on desktop*/
 
 h2 {
   margin: 0;
@@ -210,7 +210,6 @@ h2 {
   font-size: 1em;
 }
 
-
 .delivery-container div {
   margin-bottom: 1em;
   display: flex;
@@ -226,7 +225,6 @@ h2 {
   min-width: 57px;
   text-transform: uppercase;
 }
-
 
 .payment-container div {
   margin-bottom: 1em;
@@ -244,7 +242,6 @@ h2 {
   display: flex;
   flex-direction: column;
 }
-
 
 .checkout-container {
   position: relative;
@@ -419,6 +416,10 @@ h2 {
   width: 50%;
 }
 
+.bold {
+  font-weight: bold;
+}
+
 @media only screen and (max-width: 700px) {
   .contact-flex {
     flex-direction: column;
@@ -462,7 +463,7 @@ h2 {
 }
 
 .contact-form-message textarea {
-  height: 236px;
+  height: 300px;
   font-family: helvetica, arial, sans-serif;
   padding-top: 0.5em;
 }
@@ -543,5 +544,50 @@ h2 {
   .faq-contact {
     flex-direction: column;
     gap: 1em;
+  }
+}
+
+
+/* NEWSLETTER */
+
+.newsletter {
+  background-image: url(/assets/images/newsletter.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 30px;
+  color: white;
+}
+
+.newsletter-text {
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 20px;
+  border-radius: 4px;
+}
+
+.newsletter h1 {
+  font-size: 1.8rem;
+  letter-spacing: 0.375rem;
+}
+
+.newsletter p,
+.newsletter a {
+  margin-top: 2em;
+}
+
+@media only screen and (max-width: 700px) {
+  .newsletter {
+    padding: 10px;
+  }
+}
+
+@media only screen and (min-width: 701px) and (max-width: 1000px) {
+  .newsletter {
+    padding: 50px;
+  }
+}
+
+@media only screen and (min-width: 1001px) {
+  .newsletter {
+    padding: 100px;
   }
 }
