--- a/css/content.css
+++ b/css/content.css
@@ -437,6 +437,10 @@ h2 {
 
 /* CONTACT FORM */
 
+.contact-form {
+  position: relative;
+}
+
 .contact-form-start h2,
 .contact-form-start p {
   margin-bottom: 1em;
@@ -481,9 +485,36 @@ h2 {
   text-transform: uppercase;
 }
 
+
+.submit-overlay {
+  position: relative;
+  display: flex;
+  justify-content: end;
+}
+
+#submit-checkbox {
+  display: none;
+}
+
+.submit-text {
+  background-color: rgb(149, 225, 149);
+  padding: 10px;
+  border-radius: 4px;
+  letter-spacing: 0.5px;
+  text-align: center;
+  position: absolute;
+  bottom: 46px;
+  right: -1000px;
+}
+
+.submit-overlay [type="checkbox"]:checked ~ .submit-text {
+  right: 0;
+  transition: 1s;
+}
+
 @media only screen and (max-width: 700px) {
   .contact-form-submit {
-    justify-content: center
+    justify-content: center;
   }
 }
 
