--- a/css/home.css
+++ b/css/home.css
@@ -36,9 +36,25 @@ h2 {
 .sale,
 .shop,
 .activity {
+  margin-bottom: 50px;
+}
+
+@media only screen and (max-width: 700px) {
+  .sale,
+  .shop,
+  .activity {
   margin-left: 50px;
   margin-right: 50px;
-  margin-bottom: 50px;
+}
+}
+
+@media only screen and (min-width: 701px) and (max-width: 1000px) {
+  .sale,
+  .shop,
+  .activity {
+    margin-left: 60px;
+    margin-right: 60px;
+  }
 }
 
 @media only screen and (min-width: 701px) {
@@ -49,7 +65,9 @@ h2 {
   h2 {
     font-size: 3.75rem;
   }
+}
 
+@media only screen and (min-width: 1001px) {
   .sale,
   .shop,
   .activity {
