--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -175,154 +175,81 @@ header {
 
 /* FOOTER */
 
-/* I the middle between mobile and desktop all the words scramble together ... */
-
 footer {
   background-color: rgb(46, 72, 107);
-  display: flex;
-  flex-direction: column;
   color: white;
   font-family: helvetica, arial, sans-serif;
-  font-size: 1em;
-  padding-bottom: 10px;
-}
-
-.footer-top {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 20px;
+  padding: 1em 2em;
+  gap: 2em;
 }
 
-.footer-rainydays {
-  width: 100%;
+.footer-logo img {
+  max-width: 80%;
 }
 
-.our-world ul {
-  padding: 0;
-}
-
-.our-world li {
-  display: block;
-  margin-bottom: 14px;
-}
-
-.our-world a {
-  text-decoration: none;
-  color: white;
-}
-
-.follow-us {
+.our-world nav,
+.social-media {
   display: flex;
+  gap: 1.5em;
+  margin-top: 1em;
+}
+
+.our-world nav {
   flex-direction: column;
-  gap: 16px;
 }
 
 .social-media {
-  display: flex;
-  flex-direction: row;
   align-items: center;
-  gap: 20px;
 }
 
-.footer-icon {
-  width: 100%;
+footer a {
+  text-decoration: none;
+  color: white;
 }
 
 .footer-newsletter {
   display: flex;
   flex-direction: column;
-  gap: 14px;
+  gap: 1em;
 }
 
-/* The rainydays logo for the footer is blurry ... */
+.footer-newsletter-line {
+  display: flex;
+  gap: 0.5em;
+}
 
+.footer-newsletter a {
+  padding: 0.5em 0.8em;
+  background-color: rgb(254, 169, 51);
+  color: black;
+  border-radius: 4px;
+}
 
-/* MOBILE STYLES */
+.footer-newsletter label {
+  display: none;
+}
+
+.footer-newsletter input {
+  border: none;
+  border-radius: 4px;
+  width: 100%;
+  padding-left: 1em;
+}
+
 @media only screen and (max-width: 700px) {
-  .footer {
-    height: 360px;
+  .our-world {
+    display: none;
   }
 
-  .footer-top {
-    border-bottom: 1px solid white;
-  }
-  /* Why is there a border at the bottom of the footer-bottom ? */
-  
-  .footer-bottom {
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  
-  .newsletter-mail input {
-    width: 70%;
-    height: 24px;
-    border-radius: 6px;
-    border: none;
-    padding-left: 10px;
-    font-size: 1em;
-  }
-
-  .newsletter-mail input:focus {
-    outline: none;
-  }
-  
-  .newsletter-mail {
-    position: relative;
-  }
-  
-  .newsletter-button {
-    position: absolute;
-    top: 0px;
-    left: 65%;
-    background-color: rgb(254, 169, 51);
-    padding: 3.5px 12px;
-    border-radius: 6px;
-  }  
-
-  .desktop-newsletter {
+  .follow-us {
     display: none;
   }
 }
 
-/* DESKTOP STYLES */
-@media only screen and (min-width: 701px) {
-  .footer-bottom {
+@media only screen and (min-width: 701px) and (max-width: 1000px) {
+  .our-world {
     display: none;
-  }
-
-  .desktop-newsletter {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-  }
-
-
-  .desktop-newsletter-mail-input {
-    width: 80%;
-    height: 24px;
-    border-radius: 6px;
-    border: none;
-    padding-left: 10px;
-    font-size: 1em;
-  }
-
-  .desktop-newsletter-mail-input:focus {
-    outline: none;
-  }
-
-  .desktop-newsletter-mail {
-  position: relative;
-  }
-
-  .desktop-newsletter-button {
-    background-color: rgb(254, 169, 51);
-    padding: 3.5px 12px;
-    border-radius: 6px;
-    position: absolute;
-    top: 0;
-    left: 75%;
   }
 }
