--- a/css/content.css
+++ b/css/content.css
@@ -493,12 +493,12 @@ h2 {
   text-align: center;
   position: absolute;
   bottom: 46px;
-  right: -1000px;
+  opacity: 0;
 }
 
 .submit-overlay [type="checkbox"]:checked ~ .submit-text {
-  right: 0;
-  transition: 1s;
+  opacity: 1;
+  transition: 0.8s;
 }
 
 @media only screen and (max-width: 700px) {
