--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,7 @@
+main {
+    margin-top: 130px;
+}
+
 .banner {
   background-image: url(../assets/images/banner-image.jpg);
   background-repeat: no-repeat;
