--- a/css/general.css
+++ b/css/general.css
@@ -1,10 +1,3 @@
-/*Is helvetica a web safe font? win 7,3% mac 100%
-@font-face {
-  font-family: Helvetica;
-  src: url();
-}
-*/
-
 html, body {
   margin: 0;
   padding: 0;
@@ -39,13 +32,11 @@ a:hover {
   cursor: pointer;
 }
 
-
 .active {
   font-weight: bold;
 }
 
 /* BREADCRUMBS */
-
 .breadcrumbs {
   border-bottom: 1px solid black;
 }
@@ -67,17 +58,13 @@ a:hover {
   margin: 20px;
 }
 
-
-/* SPAN CLASSES */
-
+/* SPAN CLASS */
 .orange {
   color: rgb(254, 169, 51);
   text-transform: uppercase;
 }
 
-
 /* BUTTONS */
-
 .cta-blue {
   width: 200px;
   height: 40px;
@@ -123,9 +110,3 @@ a:hover {
   background-color: rgb(255, 189, 71);
   cursor: pointer;
 }
-
-/*Mobile styles (template)*/
-@media only screen and (max-width: 700px) {}
-
-/*Desktop styles (template)*/
-@media only screen and (min-width: 701px) {}
